// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots renders correctly with custom background color 1`] = `
<div
  className="
        bg-blue-100 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Blue Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom border color 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border-red-500 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Red Border Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom className 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        custom-class
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom width and height 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": "200px",
      "width": "300px",
    }
  }
>
  <div
    data-testid="card-content"
  >
    Custom Size Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with default props 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with elevated variant 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        shadow-md
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Elevated Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with flat variant 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Flat Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with full border radius 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow undefined 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Full Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with header and footer 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  header={
    <div
      data-testid="card-header"
    >
      Card Header
    </div>
  }
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Card Body
  </div>
  <div
    className="border-t border-gray-200 dark:border-gray-700 px-4 py-3"
    data-testid="card-footer"
  >
    <div
      data-testid="card-footer"
    >
      Card Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with hover effect 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
        transition-shadow duration-200 hover:shadow-lg 
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Hoverable Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with large border radius 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-xl 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Large Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with large padding 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-6
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Large Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with medium border radius 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Medium Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with medium padding 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Medium Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with no border radius 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-none 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    No Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with no padding 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-0
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    No Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with onClick handler 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  onClick={[Function]}
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Clickable Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with outlined variant 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        border border-gray-200 dark:border-gray-700
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Outlined Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with small border radius 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-sm 
        border border-gray-200 dark:border-gray-700 
         
        
        p-4
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Small Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with small padding 1`] = `
<div
  className="
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        border border-gray-200 dark:border-gray-700 
         
        
        p-3
        
      "
  data-testid="card"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    data-testid="card-content"
  >
    Small Padding Card
  </div>
</div>
`;
